--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/mainFragment">
 
+    <fragment tools:layout="@layout/fragment_main"
+        android:id="@+id/mainFragment"
+        android:name="com.example.pokdex.Fragments.MainFragment"
+        android:label="MainFragment"
+
+        >
+        <action
+            android:id="@+id/action_mainFragment_to_randomPokemonFragment"
+            app:destination="@id/randomPokemonFragment" />
+    </fragment>
+    <fragment
+        tools:layout="@layout/fragment_random_pokemon"
+        android:id="@+id/randomPokemonFragment"
+        android:name="com.example.pokdex.Fragments.RandomPokemonFragment"
+        android:label="RandomPokemonFragment" />
 </navigation>
