--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,6 +17,9 @@
             <argument app:argType="integer"
                 android:name="id"/>
         </action>
+        <action
+            android:id="@+id/action_mainFragment_to_displayAllPokemonFragment"
+            app:destination="@id/displayAllPokemonFragment" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_display_pokemon"
@@ -27,4 +30,9 @@
             android:name="id"
             app:argType="integer" />
     </fragment>
+    <fragment
+        android:id="@+id/displayAllPokemonFragment"
+        android:name="com.example.pokdex.Fragments.DisplayAllPokemonFragment"
+        android:label="fragment_display_all_pokemon"
+        tools:layout="@layout/fragment_display_all_pokemon" />
 </navigation>
