--- a/app/src/main/res/layout/item_recyclerview_display_all.xml
+++ b/app/src/main/res/layout/item_recyclerview_display_all.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/pokemon_card"
         android:layout_width="160dp"
         android:layout_height="180dp"
         android:layout_marginBottom="16dp"
