--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,18 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/displayAllPokemonFragment">
 
-    <fragment tools:layout="@layout/fragment_main"
-        android:id="@+id/mainFragment"
-        android:name="com.example.pokdex.Fragments.MainFragment"
-        android:label="MainFragment"
-
-        >
-        <action
-            android:id="@+id/action_mainFragment_to_displayAllPokemonFragment"
-            app:destination="@id/displayAllPokemonFragment" />
-    </fragment>
     <fragment
         tools:layout="@layout/fragment_display_pokemon"
         android:id="@+id/displayPokemonFragment"
