Added base experience, weight in kg, height in cm in the DisplayPokemon Fragment

--- a/app/src/main/res/layout/fragment_display_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_pokemon.xml
@@ -42,6 +42,28 @@
                     android:layout_marginTop="16dp"
                     android:gravity="center_horizontal"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="16dp">
+                    <TextView
+                        android:id="@+id/display_pokemon_experience"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"/>
+                    <TextView
+                        android:id="@+id/display_pokemon_height"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"/>
+                    <TextView
+                        android:id="@+id/display_pokemon_weight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"/>
+
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
