--- a/app/src/main/res/layout/item_recyclerview_display_all.xml
+++ b/app/src/main/res/layout/item_recyclerview_display_all.xml
@@ -36,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
+                android:gravity="center_horizontal"
                 android:text="Name"
                 android:textAppearance="?attr/textAppearanceHeadline6"/>
         </LinearLayout>
