Added abilities recyclerview (now just need to make it look better)

--- a/app/src/main/res/layout/fragment_display_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_pokemon.xml
@@ -64,6 +64,19 @@
                         android:layout_marginEnd="10dp"/>
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="182dp"
+                    android:layout_height="178dp"
+                    android:orientation="horizontal">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/display_pokemon_ability_recyclerview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" />
+
+
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
