--- a/app/src/main/res/layout/fragment_display_all_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_all_pokemon.xml
@@ -10,7 +10,9 @@
         android:id="@+id/display_all_recyclerview"
         android:layout_width="411dp"
         android:layout_height="677dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
