--- a/app/src/main/res/layout/item_recyclerview_display_all.xml
+++ b/app/src/main/res/layout/item_recyclerview_display_all.xml
@@ -7,16 +7,12 @@
         android:id="@+id/pokemon_card"
         android:layout_width="160dp"
         android:layout_height="140dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="70dp"
+        android:layout_margin="10dp"
         app:cardBackgroundColor="?attr/colorPrimaryDark"
         app:cardCornerRadius="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="bottom"
             android:background="#FFFFFF"
             android:orientation="vertical"
             android:padding="8dp">
@@ -31,14 +27,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </com.google.android.material.card.MaterialCardView>
+
             <TextView
                 android:id="@+id/display_all_pokemon_name"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:padding="2dp"
                 android:gravity="center_horizontal"
+                android:padding="2dp"
                 android:text="Name"
-                android:textAppearance="?attr/textAppearanceHeadline6"/>
+                android:textAppearance="?attr/textAppearanceHeadline6" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
