--- a/app/src/main/res/layout/fragment_display_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_pokemon.xml
@@ -86,6 +86,11 @@
                         android:layout_height="wrap_content" />
 
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/display_pokemon_evolutions_recyclerview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
                 </LinearLayout>
             </LinearLayout>
 
