--- a/app/src/main/res/layout/fragment_display_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_pokemon.xml
@@ -82,29 +82,46 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:layout_marginTop="10dp"
-                    android:text="Abilities: "
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
                 <LinearLayout
                     android:layout_width="182dp"
                     android:layout_height="178dp"
-                    android:orientation="horizontal">
-
+                    android:orientation="vertical"
+                    android:layout_gravity="left">
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:text="Abilities: "
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
                     <androidx.recyclerview.widget.RecyclerView
+                        android:layout_gravity="left"
                         android:id="@+id/display_pokemon_ability_recyclerview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
-
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="182dp"
+                    android:layout_height="178dp"
+                    android:orientation="vertical"
+                    android:layout_gravity="right">
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:text="Evolutions: "
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
                     <androidx.recyclerview.widget.RecyclerView
+                        android:layout_gravity="left"
                         android:id="@+id/display_pokemon_evolutions_recyclerview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
-
                 </LinearLayout>
+            </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
