--- a/app/src/main/res/layout/fragment_display_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_pokemon.xml
@@ -34,14 +34,6 @@
                 app:strokeColor="#FF777777"
                 app:strokeWidth="1dp" />
 
-            <!--        <ImageView-->
-<!--            android:id="@+id/display_pokemon_imageview"-->
-<!--            android:layout_width="150dp"-->
-<!--            android:layout_height="150dp"-->
-<!--            android:scaleType="centerCrop"-->
-<!--            android:layout_gravity="center_horizontal"-->
-<!--            />-->
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,7 +75,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                 <LinearLayout
@@ -96,9 +89,10 @@
                         android:text="Abilities: "
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                         android:layout_width="match_parent"
+                        android:textAlignment="center"
                         android:layout_height="wrap_content"/>
                     <androidx.recyclerview.widget.RecyclerView
-                        android:layout_gravity="left"
+                        android:layout_gravity="center"
                         android:id="@+id/display_pokemon_ability_recyclerview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -111,12 +105,14 @@
                     android:layout_gravity="right">
                     <TextView
                         android:layout_marginTop="10dp"
-                        android:text="Evolutions: "
+                        android:text="Evolution chain: "
+                        android:textAlignment="center"
+                        android:layout_gravity="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <androidx.recyclerview.widget.RecyclerView
-                        android:layout_gravity="left"
+                        android:layout_gravity="center"
                         android:id="@+id/display_pokemon_evolutions_recyclerview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
