--- a/app/src/main/res/layout/fragment_display_all_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_all_pokemon.xml
@@ -8,9 +8,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/display_all_recyclerview"
-        android:layout_width="411dp"
-        android:layout_height="677dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
