--- a/app/src/main/res/layout/item_recyclerview_display_all.xml
+++ b/app/src/main/res/layout/item_recyclerview_display_all.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/pokemon_card"
-        android:layout_width="160dp"
-        android:layout_height="140dp"
-        android:layout_margin="10dp"
-        app:cardBackgroundColor="?attr/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        app:cardBackgroundColor="@color/cardview_dark_background"
         app:cardCornerRadius="4dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFFFFF"
             android:orientation="vertical"
-            android:padding="8dp">
+            app:cardBackgroundColor="@color/cardview_dark_background">
+
             <com.google.android.material.card.MaterialCardView
-                android:layout_width="150dp"
-                android:layout_height="90dp"
+                android:layout_width="match_parent"
+                android:layout_height="110dp"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="@dimen/cardview_default_elevation">
 
                 <ImageView
+                    android:layout_gravity="center"
                     android:id="@+id/display_all_pokemon_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
@@ -30,11 +32,12 @@
 
             <TextView
                 android:id="@+id/display_all_pokemon_name"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:padding="2dp"
                 android:text="Name"
+                android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
