improved the ui a bit

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <argument
             android:name="id"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_displayPokemonFragment_to_displayAllPokemonFragment"
+            app:destination="@id/displayAllPokemonFragment" />
     </fragment>
     <fragment
         android:id="@+id/displayAllPokemonFragment"
