--- a/app/src/main/res/layout/fragment_display_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_pokemon.xml
@@ -21,7 +21,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <com.airbnb.lottie.LottieAnimationView
 
+                android:id="@+id/animationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/display_pokemon_cardview"
+                app:layout_constraintVertical_bias="0.336"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_url="https://assets10.lottiefiles.com/packages/lf20_uej545s6.json" />
             <com.synnapps.carouselview.CarouselView
                 android:id="@+id/carouselView"
                 android:layout_width="200dp"
@@ -57,65 +71,76 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-
-                        android:layout_marginEnd="10dp"/>
+                        android:layout_marginEnd="10dp"
+                        />
                     <TextView
+                        android:layout_marginStart="10dp"
                         android:id="@+id/display_pokemon_height"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:layout_marginEnd="10dp"/>
-                    <TextView
-                        android:id="@+id/display_pokemon_weight"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:layout_marginEnd="10dp"/>
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
 
                 </LinearLayout>
-
+                <TextView
+                    android:id="@+id/display_pokemon_weight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                 <LinearLayout
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:layout_width="182dp"
+                    android:layout_width="162dp"
                     android:layout_height="178dp"
                     android:orientation="vertical"
                     android:layout_gravity="left">
+
+
+
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="Abilities: "
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                        android:layout_width="match_parent"
-                        android:textAlignment="center"
-                        android:layout_height="wrap_content"/>
+                        android:textAlignment="viewStart"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_gravity="center"
                         android:id="@+id/display_pokemon_ability_recyclerview"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+
 
                 </LinearLayout>
+                    <View
+                        android:id="@+id/divider"
+                        android:layout_width="4dp"
+                        android:layout_height="match_parent"
+                        android:background="?android:attr/listDivider"
+                        android:layout_marginEnd="20dp"/>
                 <LinearLayout
-                    android:layout_width="182dp"
+                    android:layout_width="162dp"
                     android:layout_height="178dp"
                     android:orientation="vertical"
                     android:layout_gravity="right">
+
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
                         android:layout_marginTop="10dp"
                         android:text="Evolution chain: "
-                        android:textAlignment="center"
-                        android:layout_gravity="center"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:textAlignment="viewStart"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_gravity="center"
                         android:id="@+id/display_pokemon_evolutions_recyclerview"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
             </LinearLayout>
@@ -126,20 +151,5 @@
     </com.google.android.material.card.MaterialCardView>
 
 
-    <com.airbnb.lottie.LottieAnimationView
-
-        android:id="@+id/animationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/display_pokemon_cardview"
-        app:layout_constraintVertical_bias="0.336"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_url="https://assets10.lottiefiles.com/packages/lf20_uej545s6.json" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
