--- a/app/src/main/res/layout/fragment_display_all_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_all_pokemon.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.DisplayAllPokemonFragment">
+    tools:context=".fragments.DisplayAllPokemonFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/display_all_recyclerview"
